crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_unary-3.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"-!10\")"
---
Ok:
  - Unary:
      - - Negate
        - start: 0
          end: 1
      - - Unary:
            - - Not
              - start: 1
                end: 2
            - - Value:
                  I32: 10
              - start: 2
                end: 4
        - start: 1
          end: 4
  - start: 0
    end: 4

