crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_unary.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"-10\")"
---
Ok:
  - Unary:
      - - Negate
        - start: 0
          end: 1
      - - Value:
            I32: 10
        - start: 1
          end: 3
  - start: 0
    end: 3

