crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_use_statement-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "statement().parse(\"use Foo::*;\")"
---
Ok:
  - Use:
      module:
        - Foo
        - start: 3
          end: 7
      name:
        - "*"
        - start: 9
          end: 10
  - start: 0
    end: 11

