crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_use_statement.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "statement().parse(\"use Foo::Bar;\")"
---
Ok:
  - Use:
      module:
        - Foo
        - start: 3
          end: 7
      name:
        - Bar
        - start: 9
          end: 12
  - start: 0
    end: 13

