crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_variable-2.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"foo_bar\")"
---
Ok:
  - Variable: foo_bar
  - start: 0
    end: 7

