crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_variable-3.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"fooBar\")"
---
Ok:
  - Variable: fooBar
  - start: 0
    end: 6

