crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_variable-4.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"_fooBar\")"
---
Ok:
  - Variable: _fooBar
  - start: 0
    end: 7

