crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_variable-5.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"_\")"
---
Ok:
  - Variable: _
  - start: 0
    end: 1

