crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_variable-6.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"a3\")"
---
Ok:
  - Variable: a3
  - start: 0
    end: 2

