crates/vicuna-compiler/src/snapshots/vicuna_compiler__parser__tests__parse_variable.snap
---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"abcd\")"
---
Ok:
  - Variable: abcd
  - start: 0
    end: 4

